[gd_scene load_steps=7 format=3 uid="uid://e8it0n8ej5nj"]

[ext_resource type="Texture2D" uid="uid://cuhvuh4l8i6a7" path="res://Scenes/Player/Player.png" id="1_ty3yf"]
[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="2_88cst"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xs23g"]
size = Vector2(16, 13)

[sub_resource type="Animation" id="Animation_st80c"]
resource_name = "Exploding"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_l6lrk"]
resource_name = "Moving"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28161"]
_data = {
"Exploding": SubResource("Animation_st80c"),
"Moving": SubResource("Animation_l6lrk")
}

[node name="Player" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_ty3yf")
offset = Vector2(0, -8)
hframes = 4
vframes = 2
script = ExtResource("2_88cst")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(100, 0)
limit_bottom = 192

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_xs23g")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28161")
}

[node name="TimerSpeed" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimerSpeed" to="." method="_on_timer_speed_timeout"]
